--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ r: bioc-release
 cache: packages
 r_packages:
   - covr
-
+sudo: required
 after_success:
   - Rscript -e 'library(covr); codecov()'
 
+os:
+- linux
+- osx
+
+r:
+- release
+- oldrelease
+- devel
